Alr one is done XD

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Consornt",
         "extraarray",
         "getnumbyhyphen",
+        "lcek",
         "smolcnt",
         "toap",
         "truvalue"
