Updated + Fixed spelling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "alldig",
         "Consornt",
         "extraarray",
+        "fvalue",
         "getnumbyhyphen",
         "lcek",
         "smolcnt",
